[Harsh Vardhan]: Added UC16-JDBCPersistence in Quantity Measurement App